// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login LoginButton renders and sets value 1`] = `
<style>
.c0 {
  margin: 'auto';
}</style>

<button
  className="ui primary button c0"
  onClick={[Function]}
  role="button"
>
  <i
    aria-hidden="true"
    className="thumbs up icon"
  />
  Login
</button>
`;

exports[`Login LoginButton renders loading 1`] = `
<style>
.c0 {
  margin: 'auto';
}</style>

<button
  className="ui loading primary button c0"
  onClick={[Function]}
  role="button"
>
  <i
    aria-hidden="true"
    className="thumbs up icon"
  />
  Login
</button>
`;
